create new deployment if missing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,15 @@ jobs:
           password: ${{ secrets.DROPLET_PASSWORD }}
           script: |
             echo "Connected to Droplet"
+            # Create app directory if it doesn't exist
+            mkdir -p ~/farcaster-grpc-indexer
             cd ~/farcaster-grpc-indexer
+
+            # Initialize git repository if it doesn't exist
+            if [ ! -d .git ]; then
+              git init
+              git remote add origin https://github.com/Coop-Records/farcaster-grpc-indexer.git
+            fi
 
             # Fetch latest code and handle local changes
             git fetch --all
