--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "bun index.ts",
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch index.ts",
+    "generate-signer": "bun generateSigner.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
