--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "bun index.ts",
     "dev": "bun --watch index.ts",
-    "generate-signer": "bun generateSigner.ts"
+    "generate-signer": "bun helpers/generateSigner.ts",
+    "test-signer": "bun helpers/testSigner.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
